[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/ui/pieces/menu_Button.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/pieces/secret_entry.gd" type="Script" id=2]
[ext_resource path="res://pieces/account_entry_base_panel.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.219608 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 12
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 14
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.972549, 0.356863, 0.737255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=6]
content_margin_top = 5.0
bg_color = Color( 0.96875, 0.261108, 0.698825, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0, 0, 0, 0.0941176 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[node name="secret_entry" type="PanelContainer"]
margin_right = 680.0
margin_bottom = 45.0
rect_min_size = Vector2( 680, 0 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 64.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 660.0
margin_bottom = 25.0
alignment = 1

[node name="pubkey_entry" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 509.0
margin_bottom = 25.0
focus_mode = 0
custom_styles/read_only = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 0.937255 )
text = "EC8741e04541E12BEFC0717A0A73EBF125B9B0F482235B263D09834AA904B7643"
editable = false
expand_to_text_length = true

[node name="balance_entry" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 513.0
margin_right = 630.0
margin_bottom = 25.0
focus_mode = 0
custom_styles/read_only = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 0.937255 )
text = "0.00000000 COMB"
editable = false
expand_to_text_length = true

[node name="mine_box" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 660.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 25 )
alignment = 1

[node name="label" type="Label" parent="VBoxContainer/mine_box"]
margin_left = 42.0
margin_top = 4.0
margin_right = 136.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "Mine Address: "

[node name="mine_entry" type="LineEdit" parent="VBoxContainer/mine_box"]
margin_left = 140.0
margin_right = 533.0
margin_bottom = 25.0
focus_mode = 0
custom_styles/read_only = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 0.937255 )
text = "bc1qhjwyypdqpdcnte8y3y4rq2qtzl2x45kp9rfzv3uyx5lj7zmvjrdqqtv4c3"
editable = false
expand_to_text_length = true

[node name="sweep_button" type="Button" parent="VBoxContainer/mine_box"]
margin_left = 537.0
margin_right = 617.0
margin_bottom = 25.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 0.937255 )
enabled_focus_mode = 0
text = "Sweep"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
my_url = "/stack/stealthdata/"
[connection signal="menu_button_pressed" from="VBoxContainer/mine_box/sweep_button" to="." method="_on_sweep_button_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/mine_box/sweep_button" to="VBoxContainer/mine_box/sweep_button" method="_on_Button_pressed"]
